--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,10 @@
     <main>
         <h1 class="visually-hidden">TodoList</h1>
 
-        <div class="px-4 py-5 my-5 text-center">
-            <h1 class="display-5 fw-bold">TodoList</h1>
+        <div class="px-4 py-5 my-5">
+            <h1 class="display-5 fw-bold text-center">TodoList</h1>
             <div class="col-lg-6 mx-auto">
                 <div id="todolist"></div>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Add</button>
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Clear</button>
-                </div>
             </div>
         </div>
     </main>
