Add create new todo

--- a/src/index.html
+++ b/src/index.html
@@ -7,28 +7,13 @@
     <meta name="description" content="ToDo List">
     <meta name="author" content="Flament François">
     <title>ToDo List</title>
-    <!-- Based on -->
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/heroes/">
-    <!-- Bootstrap core CSS -->
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="./custom.scss" rel="stylesheet">
 </head>
 
 <body>
 
-    <main>
-        <h1 class="visually-hidden">TodoList</h1>
-
-        <div class="px-4 py-5 my-5">
-            <h1 class="display-5 fw-bold text-center">TodoList</h1>
-            <div class="col-lg-6 mx-auto">
-                <div id="todolist"></div>
-            </div>
-        </div>
-    </main>
-
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <main id="todolist" class="px-4 py-5 my-5"></main>
     <script type="module" src="index.tsx"></script>
 </body>
 
